// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/ProductBranding should fallback to ProductChannelsIcon when string icon name is not found in glyphMap 1`] = `
<div>
  <span
    class="ProductBrandingContainer-fAZUxM bHsTeZ"
    tabindex="-1"
  >
    <svg
      data-testid="ProductChannelsIcon"
      size="24"
    />
    <h1
      class="sr-only"
    >
      InvalidProduct
    </h1>
    <span
      class="ProductBrandingHeading-cfvnVH dQTYxK"
    >
      InvalidProduct
    </span>
  </span>
</div>
`;

exports[`components/ProductBranding should render a React element icon when switcherIcon is a React node 1`] = `
<div>
  <span
    class="ProductBrandingContainer-fAZUxM bHsTeZ"
    tabindex="-1"
  >
    <svg
      data-testid="custom-icon"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
    <h1
      class="sr-only"
    >
      CustomProduct
    </h1>
    <span
      class="ProductBrandingHeading-cfvnVH dQTYxK"
    >
      CustomProduct
    </span>
  </span>
</div>
`;

exports[`components/ProductBranding should show correct icon glyph when we are on Boards 1`] = `
<div>
  <span
    class="ProductBrandingContainer-fAZUxM bHsTeZ"
    tabindex="-1"
  >
    <svg
      data-testid="ProductChannelsIcon"
      size="24"
    />
    <h1
      class="sr-only"
    >
      Boards
    </h1>
    <span
      class="ProductBrandingHeading-cfvnVH dQTYxK"
    >
      Boards
    </span>
  </span>
</div>
`;

exports[`components/ProductBranding should show correct icon glyph when we are on Channels 1`] = `
<div>
  <span
    class="ProductBrandingContainer-fAZUxM bHsTeZ"
    tabindex="-1"
  >
    <svg
      data-testid="ProductChannelsIcon"
      size="24"
    />
    <h1
      class="sr-only"
    >
      Channels
    </h1>
    <span
      class="ProductBrandingHeading-cfvnVH dQTYxK"
    >
      Channels
    </span>
  </span>
</div>
`;

exports[`components/ProductBranding should show correct icon glyph when we are on Playbooks 1`] = `
<div>
  <span
    class="ProductBrandingContainer-fAZUxM bHsTeZ"
    tabindex="-1"
  >
    <svg
      data-testid="ProductChannelsIcon"
      size="24"
    />
    <h1
      class="sr-only"
    >
      Playbooks
    </h1>
    <span
      class="ProductBrandingHeading-cfvnVH dQTYxK"
    >
      Playbooks
    </span>
  </span>
</div>
`;
